--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,5 @@ cython_debug/
 # Updated in commit 23 - 2025-04-05 17:33:23
 
 # Updated in commit 7 - 2025-04-05 18:20:02
+
+# Updated in commit 15 - 2025-04-05 18:20:02
